# pareidolia

./: .gitignore  README.md  demo.ipynb  notebook_gutenberg_docs_create_index.ipynb  notebook_gutenberg_docs_read.ipynb  notebook_olimpiadas.ipynb  notebook_rust_docs_create_index.ipynb  notebook_rust_docs_read.ipynb  notebook_text_local.ipynb  openai-demo.ipynb  pandas-demo.ipynb  pyproject.toml  sport1.csv
manuales/: Manual_Jupyter_Santiago.ipynb  manual_jupyter_Carlos.ipynb  manual_jupyter_Patricia.ipynb.ipynb
